--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             <h3>Top three activities to do at Torshov</h3>
                 <div class="main">
                     <div class="column">
-                        <img class="img" src="images/theatre.jpg" alt="Building of Torshov Theatre">
+                        <img class="img" src="theatre.jpg" alt="Building of Torshov Theatre">
                         <h4>Attend a show or a concert</h4>
                         <p>The Torshov Theatre is a great place to spend your night out.</p>
                     </div>
                     <div class="column">
-                        <img class="img" src="images/park.jpg" alt="View of Torshov Park">
+                        <img class="img" src="park.jpg" alt="View of Torshov Park">
                         <h4>Go for a piknic in the local park</h4>
                         <p>The Torshov Park is perfect for piknic, getting some tan, or just chilling out.</p>
                     </div>
                     <div class="column">
-                        <img class="img" src="images/sports.jpg" alt="Yellow-blue volleyball in the sand">
+                        <img class="img" src="sports.jpg" alt="Yellow-blue volleyball in the sand">
                         <h4>Play sports at the Lilleborg field</h4>
                         <p>Play volleyball, football, basket ball or lift some weights.</p>
                     </div>
@@ -39,7 +39,7 @@
         </div>
 
         <div id="guide">
-            <img id="guide-img" src="images/per.jpg" alt="Per is smiling at the camera">
+            <img id="guide-img" src="per.jpg" alt="Per is smiling at the camera">
             <div>
                 <h3>Your guide</h3>
                 <p>“I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets.”</p>
